fix: cd-workflwo & Dockerfile

--- a/.github/workflows/cd-workflow.yml
+++ b/.github/workflows/cd-workflow.yml
@@ -37,11 +37,6 @@ jobs:
       - name: "🐳 Docker build & push"
         run:  |
           docker build -f Dockerfile \
-            --build-arg DATASOURCE_PASSWORD=${{ secrets.DATASOURCE_PASSWORD }} \
-            --build-arg DATASOURCE_URL=${{ secrets.DATASOURCE_URL }} \
-            --build-arg DATASOURCE_URL_DEV=${{ secrets.DATASOURCE_URL_DEV }} \
-            --build-arg DATASOURCE_USERNAME=${{ secrets.DATASOURCE_USERNAME }} \
-            --build-arg SPRING_PROFILES_ACTIVE=dev \
             -t ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_IMAGE }} .
 
           docker push ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_IMAGE }}
@@ -62,10 +57,16 @@ jobs:
             --document-name "AWS-RunShellScript" \
             --comment "Deploying application" \
             --parameters 'commands=[
-              "sudo docker stop BARO_CONTAINER || true",
-              "sudo docker rm BARO_CONTAINER || true",
+              "sudo docker stop NMRADER_CONTAINER || true",
+              "sudo docker rm NMRADER_CONTAINER || true",
               "sudo docker pull ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_IMAGE }}",
-              "sudo docker run -d -p 8080:8080 --name BARO_CONTAINER ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_IMAGE }}",
+              "sudo docker run -d -p 8080:8080 --name NMRADER_CONTAINER \
+              -e DATASOURCE_USERNAME=${{ secrets.DATASOURCE_USERNAME }} \
+              -e DATASOURCE_PASSWORD=${{ secrets.DATASOURCE_PASSWORD }} \
+              -e DATASOURCE_URL=${{ secrets.DATASOURCE_URL }} \
+              -e DATASOURCE_URL_DEV=${{ secrets.DATASOURCE_URL_DEV }} \
+              -e SPRING_PROFILES_ACTIVE=dev \
+              ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_IMAGE }}",
               "sudo docker image prune -f"
             ]' \
             --output text
