feat: fcm & jpa & jwt

--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,10 @@ dependencies {
     runtimeOnly 'mysql:mysql-connector-java:8.0.33'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
+
+    implementation 'com.google.firebase:firebase-admin:9.2.0'           // Google Firebase Admin
+    implementation 'com.fasterxml.jackson.core:jackson-core:2.16.1'     // Jackson Data Bind
+
 }
 
 tasks.named('test') {
