feat: AWS S3 service

--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,11 @@ dependencies {
     implementation 'com.google.firebase:firebase-admin:9.2.0'           // Google Firebase Admin
     implementation 'com.fasterxml.jackson.core:jackson-core:2.16.1'     // Jackson Data Bind
 
+    implementation platform('software.amazon.awssdk:bom:2.25.10') // 최신 BOM 사용 권장
+    implementation 'software.amazon.awssdk:s3'
+    implementation 'software.amazon.awssdk:s3-transfer-manager'
+    implementation 'software.amazon.awssdk:netty-nio-client' // 비동기 클라이언트 (TransferManager용)
+
 }
 
 tasks.named('test') {
