--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -101,3 +101,13 @@ spring:
 spring:
   jackson:
     time-zone: Asia/Seoul
+
+cloud:
+  aws:
+    credentials:
+      access-key: ${AWS_ACCESS_KEY}
+      secret-key: ${AWS_SECRET_KEY}
+    region:
+      static: ap-northeast-2
+    s3:
+      bucket: ${AWS_S3_BUCKET_NAME}
