--- a/.github/workflows/cd-workflow.yml
+++ b/.github/workflows/cd-workflow.yml
@@ -60,7 +60,20 @@ jobs:
               "sudo docker stop NMRADER_CONTAINER || true",
               "sudo docker rm NMRADER_CONTAINER || true",
               "sudo docker pull ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_IMAGE }}",
-              "sudo docker run -d -p 8080:8080 --name NMRADER_CONTAINER -e DATASOURCE_USERNAME=${{ secrets.DATASOURCE_USERNAME }} -e DATASOURCE_PASSWORD=${{ secrets.DATASOURCE_PASSWORD }} -e DATASOURCE_URL=${{ secrets.DATASOURCE_URL }} -e DATASOURCE_URL_DEV=${{ secrets.DATASOURCE_URL_DEV }} -e FIREBASE_CREDENTIALS_JSON=${{ secrets.FIREBASE_CREDENTIALS_JSON }} -e SPRING_PROFILES_ACTIVE=dev ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_IMAGE }}",
+              "sudo docker run -d -p 8080:8080 --name NMRADER_CONTAINER \
+                -e DATASOURCE_USERNAME=${{ secrets.DATASOURCE_USERNAME }} \
+                -e DATASOURCE_PASSWORD=${{ secrets.DATASOURCE_PASSWORD }} \
+                -e DATASOURCE_URL=${{ secrets.DATASOURCE_URL }} \
+                -e DATASOURCE_URL_DEV=${{ secrets.DATASOURCE_URL_DEV }} \
+                -e FIREBASE_CREDENTIALS_JSON=${{ secrets.FIREBASE_CREDENTIALS_JSON }} \
+                -e SPRING_PROFILES_ACTIVE=dev \
+                -e AWS_S3_BUCKET_ACCESS_KEY=${{ secrets.AWS_S3_BUCKET_ACCESS_KEY }} \
+                -e AWS_S3_BUCKET_SECRET_KEY=${{ secrets.AWS_S3_BUCKET_SECRET_KEY }} \
+                -e AWS_S3_BUCKET_NAME=${{ secrets.AWS_S3_BUCKET_NAME }} \
+                -e JWT_SECRET_KEY=${{ secrets.JWT_SECRET_KEY }} \
+                -e JWT_EXPIRED_IN=${{ secrets.JWT_EXPIRED_IN }} \
+                -e JWT_REFRESH_EXPIRED_IN=${{ secrets.JWT_REFRESH_EXPIRED_IN }} \
+                ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_IMAGE }}",
               "sudo docker image prune -f"
             ]' \
             --output text
