--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -105,9 +105,14 @@ spring:
 cloud:
   aws:
     credentials:
-      access-key: ${AWS_ACCESS_KEY}
-      secret-key: ${AWS_SECRET_KEY}
+      access-key: ${AWS_S3_BUCKET_ACCESS_KEY}
+      secret-key: ${AWS_S3_BUCKET_SECRET_KEY}
     region:
       static: ap-northeast-2
     s3:
       bucket: ${AWS_S3_BUCKET_NAME}
+
+secret:
+  jwt-secret-key: ${JWT_SECRET_KEY}
+  jwt-expired-in: ${JWT_EXPIRED_IN}
+  jwt-refresh-expired-in: ${JWT_REFRESH_EXPIRED_IN}
